# hermes-engine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  run.py
.github/workflows/: ci.yml
agent/: __init__.py  engine.py  router.py  schemas.py  service.py
api_compat/: router.py  schemas.py
config/: __init__.py  settings.py
conversation/: __init__.py  router.py  schemas.py  service.py  store.py
gateway/: __init__.py  retry.py
mcp/: __init__.py  bridge.py  router.py  schemas.py  service.py
memory/: __init__.py  curator.py  router.py  schemas.py  service.py  store.py
provider/: __init__.py  anthropic_adapter.py  base.py  fallback.py  gemini_adapter.py  model_fallback.py  openai_adapter.py  registry.py  router.py  schemas.py  service.py
shared/: __init__.py  api_keys.py  audit.py  circuit_breaker.py  context_builder.py  context_compressor.py  conversation_summarizer.py  data_cleaner.py  db_maintenance.py  dependencies.py  errors.py  event.py  hot_reload.py  idempotency.py  memory_synthesizer.py  migrations.py  model_cache.py  models.py  observability.py  plugin.py  response_cache.py  scheduler.py  scheduler_router.py  session_router.py  sqlite_base.py  subagent.py  tenant.py  trajectory.py  trajectory_router.py  user_context.py  utils.py
skill/: __init__.py  creator.py  loader.py  matcher.py  patcher.py  router.py  schemas.py  service.py
tests/: __init__.py  conftest.py  test_agent.py  test_anthropic_protocol.py  test_auth.py  test_chinese_providers.py  test_conversation.py  test_curator_llm.py  test_errors.py  test_event_bus.py  test_final_capabilities.py  test_health.py  test_mcp.py  test_mcp_health.py  test_memory.py  test_model_listing.py  test_openai_compat.py  test_p0_capabilities.py  test_provider.py  test_self_evolution.py  test_skill.py  test_tools.py  test_websocket.py
tools/: __init__.py  approval.py  executor.py  router.py  schemas.py  service.py
tools/browser/: __init__.py
tools/builtin/: __init__.py  _shared.py  execute_command.py  read_file.py  write_file.py
tools/terminal_backends/: __init__.py  docker_backend.py  local_backend.py  ssh_backend.py
