[project]
name = "hermes-engine"
version = "0.1.0"
description = "Feature-based FastAPI backend exposing Hermes Agent core capabilities via REST + WebSocket"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.28.0",
    "anthropic>=0.45.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
