[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]

[project]
name = "hermes-engine"
version = "0.1.0"
description = "Feature-based FastAPI backend exposing Hermes Agent core capabilities via REST + WebSocket"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.28.0",
    "anthropic>=0.45.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.0.0",
]
observability = [
    "python-json-logger>=3.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["agent", "config", "conversation", "mcp", "memory", "provider", "shared", "skill", "tools"]
omit = ["*/tests/*", "*/__pycache__/*"]
relative_files = true

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "N818",   # error suffix not required for all exceptions
]

[tool.ruff.lint.isort]
known-first-party = ["agent", "config", "conversation", "memory", "mcp", "provider", "shared", "skill", "tools"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
